# internal/db/model_user.go
@@ -4,12 +4,12 @@ import "gorm.io/gorm"
 
 type User struct {
 	*gorm.Model
-	UserName  string             `json:"user" gorm:"not null;unique;index"`
+	UserName  string             `json:"user_name" gorm:"not null;unique;index"`
 	Favorites []FavoriteCategory `json:"favorites" gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
 }
 
 type FavoriteCategory struct {
 	*gorm.Model
-	UserID int    `json:"user_id"`
+	UserID uint   `json:"user_id"`
 	Name   string `json:"name" gorm:"no null"`
 }
